@@ -33,4 +33,3 @@ m4	"!!<>'"
 	.altmacro
 
 m3	"!!<>'"
-m3	<!>!<!!>
